--- a/Readme
+++ b/Readme
@@ -2,4 +2,4 @@ Readme Trabalho A3
 Aluno: Luan Victor de Ramos Luciano
 RA: 122220736
 
-Link do vídeo: (em breve)
+Link do vídeo: https://youtu.be/1OT7nEL4pVs
